<resources>
    <string name="app_name">Sapphire Box</string>
    <string name="android_version">Android APK v1.0.0 standalone</string>
    <string name="server_label">O APK inicia o Sapphire Box dentro do próprio Android. A interface, busca, banco e downloads rodam no aparelho.</string>
    <string name="connect">Tentar novamente</string>
    <string name="server_help">Iniciando o servidor local do Sapphire Box...</string>
    <string name="server_error">Falha ao iniciar o Sapphire Box: %1$s</string>
</resources>
